# darwin_cli

./: .gitignore  Cargo.toml  README.md  TODO
.github/workflows/: rust-clippy.yml
src/: anonomize.rs  clean.rs  commands.rs  config.rs  create_darwin.rs  create_project.rs  create_report.rs  darwin_config.rs  download_results.rs  list_students.rs  list_tests.rs  main.rs  move_to_tmp_location_and_back.rs  plagiarism_checker.rs  run_tests.rs  server.rs  types.rs  util.rs  view_student_results.rs  view_student_submission.rs
src/project_runner/: maven.rs  mod.rs
template/: global.css  index.css  index.hbs  index.html  plagiarism.hbs  sidebars.js  student.css  student.hbs  student.html  student_index.css  student_index.hbs  student_index.html  tests.hbs
testing/Skel/: pom.xml
testing/Skel/src/main/java/test/test1/: Algo.java  Main.java  Math.java
testing/Skel/src/test/java/test/test1/: AlgoTests.java  AllTests.java  MathTests.java
