[package]
name = "darwin_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.9"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
tempfile = "3.15.0"
threadpool = "1.8.1"
xml = "0.8.20"
zip = "2.2.2"

[dependencies.rocket]
rocket = "0.5.1"
features = ["json"]

[[bin]]
name = "darwin_cli"
path = "src/main.rs"
