[package]
name = "darwin_cli"
version = "0.1.0"
edition = "2021"
description = "Autograder for Moodle submitted Java Programming Assignments"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.9"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
handlebars = "6.2.0"
pcoa = "0.1.2"
serde = { version = "1.0.217", features = ["derive"] }
tempfile = "3.15.0"
threadpool = "1.8.1"
tlsh-fixed = "0.1.1"
xml = "0.8.20"
zip = "2.2.2"

[[bin]]
name = "darwin_cli"
path = "src/main.rs"
